--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
   },
   "license": "MIT",
   "require": {
-    "laravel": ">=10.0.0"
+    "laravel/framework": ">=10.0.0"
   },
   "autoload": {
     "psr-4": {
