--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "phpcatcom/laravel-api-allautoparts",
   "description": "api for allautoparts",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "authors": [
     {
       "name": "Sergey Baklanov php-cat.com",
@@ -20,7 +20,7 @@
   "extra": {
     "laravel": {
       "providers": [
-        "Phpcatcom\\Api\\AllautopartsServiceProvider"
+        "Phpcatcom\\Api\\AllAutoParts\\AllautopartsServiceProvider"
       ]
     }
   },
