--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "phpcatcom/laravel-api-allautoparts",
   "description": "api for allautoparts",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "authors": [
     {
       "name": "Sergey Baklanov php-cat.com",
@@ -31,7 +31,7 @@
   "minimum-stability": "dev",
   "autoload": {
     "psr-4": {
-      "Phpcatcom\\Api\\AllAutoParts\\": "src/"
+      "Phpcatcom\\Api\\": "src/"
     }
   },
   "support": {
